Ideas rating clickable now, some fixes

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,8 @@ build/Release
 # https://docs.npmjs.com/cli/shrinkwrap#caveats
 node_modules
 
-# Debug log from npm
-npm-debug.log
+# Dist files delete
+public/dist
+
+# WebStorm files
+.idea
