--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "webpack"
+    "build": "webpack",
+    "builddev": "webpack -w",
+    "test": "karma start karma.conf.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -19,6 +21,10 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.3",
+    "chai": "^3.5.0",
+    "karma": "^1.6.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^2.0.3",
     "webpack": "^2.3.3"
   }
 }
