--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "karma": "^1.6.0",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.3",
+    "node-json-db": "^0.7.3",
     "webpack": "^2.3.3"
   }
 }
