--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.3",
     "node-json-db": "^0.7.3",
+    "uuid": "^3.0.1",
     "webpack": "^2.3.3"
   }
 }
